--- a/contacto.html
+++ b/contacto.html
@@ -5,11 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximun-scaled=5.0 , user-scalable=yes">
     <meta name="description" content="Proyecto integrador UNTREFSCHOOL">
     <meta name="author" content="Bomba Erick Walter">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Belanosima&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href=""> <!-- falta completar icono -->
-    <title>Formulario contacto-UntrefSchool</title>
-<head>
-
-
+    <link rel="shortcut icon" sizes="16x16" href=""> <!-- falta completar icono -->
+    <title>UntrefSchool</title>
 </head>
+<body>
+    
+</body>
