se agrega background

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     </header>
 
     <main>
-        <section>
+        <section class="quienesSomos">
             <h2 id="quienesSomos">Quienes somos</h2>
-            <img src="" alt="">
+            <img src="./img/quienessomos.jpg" alt="quienes somos">
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero quibusdam excepturi molestias soluta temporibus consectetur eius ratione sed? Nostrum quae esse nulla ipsum at consequatur ipsa laboriosam temporibus molestiae sint!</p>
         </section>
 
