creacion de grid en sections

--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
     <main>
         <section class="quienesSomos">
             <h2 id="quienesSomos">Quienes somos</h2>
-            <img src="./img/quienessomos.jpg" alt="quienes somos">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero quibusdam excepturi molestias soluta temporibus consectetur eius ratione sed? Nostrum quae esse nulla ipsum at consequatur ipsa laboriosam temporibus molestiae sint!</p>
+            <img class="qsimg" src="./img/quienessomos.jpg" alt="quienes somos" >
+            <p class="qsp">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero quibusdam excepturi molestias soluta temporibus consectetur eius ratione sed? Nostrum quae esse nulla ipsum at consequatur ipsa laboriosam temporibus molestiae sint!</p>
         </section>
 
         <section>
             <h2 id="elegirnos">¿Por qué elegirnos?</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea natus, eveniet necessitatibus magnam, itaque incidunt tempore provident, officia quae neque cum fugit possimus voluptates! Voluptas voluptate perferendis officiis vel. Atque.</p>
-            <img src="" alt="">
+            <p class="lp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea natus, eveniet necessitatibus magnam, itaque incidunt tempore provident, officia quae neque cum fugit possimus voluptates! Voluptas voluptate perferendis officiis vel. Atque.</p>
+            <img class="limg" src="./img/porqueelegirnos.jpg" alt="">
            
         </section>
 
-        <section>
+        <section class="pecard">
             <h2 id="propuesta">Propuesta educativa</h2>
             <article>
                 <img src="" alt="">
@@ -70,12 +70,12 @@
         
         <section>
             <h2 id="noticias">Últimas noticias</h2>
-            <article>
+            <article class="ununo">
                 <h3>Nuevos maestros</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam fugiat vel, quae similique necessitatibus esse officia obcaecati. Tenetur, beatae dolorum sequi aliquid repellendus nisi ea vitae error voluptates accusantium tempora?</p>
             </article>
 
-            <article>
+            <article class="undos">
                 <h3>Inicio de vacaciones</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis ducimus quaerat voluptas nisi soluta porro consequuntur hic omnis possimus, quidem ipsam laboriosam animi qui quas totam voluptates unde natus reiciendis.</p>
             </article>
