ajuste de nav en mobile

--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <meta name="description" content="Proyecto integrador UNTREFSCHOOL">
     <meta name="author" content="Bomba Erick Walter">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Belanosima&display=swap" rel="stylesheet">
-    
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Belanosima&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" sizes="16x16" href=""> <!-- falta completar icono -->
     <title>UntrefSchool</title>
@@ -19,6 +18,8 @@
 <body>
     <header id="inicio" class="inicio">
         <nav>
+<ul> 
+    <li class="menu" id="menu"> Inicio
 <ul>
     <li> <a href="#quienesSomos">Quienes somos</a></li>
     <li><a href="#elegirnos">¿Por qué elegirnos?</a></li>
@@ -26,6 +27,8 @@
     <li><a href="#noticias">Últimas noticias</a></li>
     <li><a href="./contacto.html" target="_blank">Contacto</a></li>
 </ul>
+</li> 
+</ul>  
         </nav>
         <h1>PROYECTO INTEGRADOR WEB UNTREFSCHOOL</h1>
     </header>
