--- a/contacto.html
+++ b/contacto.html
@@ -12,6 +12,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Belanosima&display=swap" rel="stylesheet">
 <!-- boostrap -->
+<link rel="shortcut icon" sizes="16x16" href="./img/favicon.png"> <!-- falta completar icono -->
+<!-- <a href="https://www.flaticon.es/iconos-gratis/escuela-secundaria" title="escuela secundaria iconos">Escuela secundaria iconos creados por Aranagraphics - Flaticon</a> -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
         
     <link rel="stylesheet" href="style.css">
@@ -19,5 +21,7 @@
     <title>UntrefSchool</title>
 </head>
 <body>
+
+
     
 </body>
