--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Belanosima&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" sizes="16x16" href=""> <!-- falta completar icono -->
-    <title>UntrefSchool</title>
+    <link rel="shortcut icon" sizes="16x16" href="./img/favicon.png"> <!-- falta completar icono -->
+ <!--    <a href="https://www.flaticon.es/iconos-gratis/escuela-secundaria" title="escuela secundaria iconos">Escuela secundaria iconos creados por Aranagraphics - Flaticon</a>
+    <title>UntrefSchool</title> -->
 </head>
 <body>
     <header id="inicio" class="inicio">
