--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
         <section class="pecard" >
            
             <article>
-                <img src="" alt="">
+                <img src="./img/propuestauno.jpg" alt="propuestauno">
                 <h4>Propuesta1</h4>
             </article>
 
             <article>
-                <img src="" alt="">
+                <img src="./img/propuestados.jpg" alt="propuestados">
                 <h4>Propuesta2</h4>
             </article>
 
             <article>
-                <img src="" alt="">
+                <img src="./img/propuestatres.jpg" alt="propuestatres">
                 <h4>Propuesta3</h4>
             </article>
 
             <article>
-                <img src="" alt="">
+                <img src="./img/propuestacuatro.jpg" alt="propuestacuatro">
                 <h4>Propuesta4</h4>
 
             </article>
@@ -88,19 +88,19 @@
     </main>
 
     <footer>
-        <div>
+        <div class="rs">
             <h4>Redes Sociales</h4>
             <a href="">Facebook</a>
             <a href="">Instagram</a>
             <a href="">Twiter</a>
         </div>
-        <div>
+        <div class="inst">
             <h4>Instituto</h4>
             <a href="">Ubicación</a>
 
             
         </div>
-        <div>
+        <div class="contacto">
             <h4>Contacto</h4>
             <a href="">Email</a>
             <a href="">Telefono</a>
