se agrega info wapp al footer

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header id="inicio" class="inicio">
         <nav>
 <ul> 
-    <li class="menu" id="menu"> Inicio
+    <li class="menu" id="menu"> <a href="#inicio">Inicio</a>
 <ul>
     <li> <a href="#quienesSomos">Quienes somos</a></li>
     <li><a href="#elegirnos">¿Por qué elegirnos?</a></li>
@@ -90,21 +90,21 @@
     <footer>
         <div class="rs">
             <h4>Redes Sociales</h4>
-            <a href="">Facebook</a>
-            <a href="">Instagram</a>
-            <a href="">Twiter</a>
+            <a href="https://www.facebook.com/" target="_blank">Facebook</a>
+            <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+            <a href="https://twitter.com/?lang=es" target="_blank">Twiter</a>
         </div>
         <div class="inst">
             <h4>Instituto</h4>
-            <a href="">Ubicación</a>
+            <iframe src="https://www.google.com/maps/d/embed?mid=1ujAlRihEdkGF6XSk-_sRt01Yo1k&hl=es_419&ehbc=2E312F" width="100" height="250" style="border: 0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="mb-8"></iframe>
 
             
         </div>
         <div class="contacto">
             <h4>Contacto</h4>
-            <a href="">Email</a>
-            <a href="">Telefono</a>
-            <a href="">Whatsapp</a>
+            <a class="Email" href="" target="_blank">Email</a>
+            <a class="Telefono"  target="_blank">Telefono</a>
+            <a class="WhatsApp" href="https://wa.me/5491123915114?text=Hola soy Bomba Erick y quiero aprobar">WhatsApp</a>
 
         </div>
         <a href="#inicio">Volver al Inicio</a>
