--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
         </div>
         <div class="inst">
             <h4>Instituto</h4>
-            <iframe src="https://www.google.com/maps/d/embed?mid=1ujAlRihEdkGF6XSk-_sRt01Yo1k&hl=es_419&ehbc=2E312F" width="100" height="250" style="border: 0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="mb-8"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d210454.53302054704!2d-58.69747170068025!3d-34.49395742302816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb825bfe94b41%3A0x9605c0d752a00a83!2sUNTREF%20Virtual!5e0!3m2!1ses-419!2sar!4v1690681127795!5m2!1ses-419!2sar" width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
             
         </div>
         <div class="contacto">
             <h4>Contacto</h4>
-            <a class="Email" href="" target="_blank">Email</a>
+            <a href="./contacto.html" target="_blank">Contacto</a>
             <a class="Telefono"  target="_blank">Telefono</a>
             <a class="WhatsApp" href="https://wa.me/5491123915114?text=Hola soy Bomba Erick y quiero aprobar">WhatsApp</a>
 
