--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
     <footer>
         <div class="rs">
             <h4>Redes Sociales</h4>
-            <a href="https://www.facebook.com/" target="_blank">Facebook</a>
-            <a href="https://www.instagram.com/" target="_blank">Instagram</a>
-            <a href="https://twitter.com/?lang=es" target="_blank">Twiter</a>
+            <a class="facebook" href="https://www.facebook.com/" target="_blank" > <img class="icono" src="./img/facebook.png" alt="Facebook"> Facebook</a>
+            <a class="instagram" href="https://www.instagram.com/" target="_blank"><img class="icono" src="./img/instagram.png" alt="Instagram"> Instagram</a>
+            <a class="twitter" href="https://twitter.com/?lang=es" target="_blank"><img class="icono" src="./img/twitter.png" alt="Twiter"> Twiter</a>
         </div>
         <div class="inst">
             <h4>Instituto</h4>
@@ -102,15 +102,15 @@
         </div>
         <div class="contacto">
             <h4>Contacto</h4>
-            <a href="./contacto.html" target="_blank">Contacto</a>
-            <a class="Telefono"  target="_blank">Telefono</a>
-            <a class="WhatsApp" href="https://wa.me/5491123915114?text=Hola soy Bomba Erick y quiero aprobar">WhatsApp</a>
+            <a  href="./contacto.html" target="_blank"><img class="icono" src="./img/formulario.png" alt="Contacto"> Contacto </a>
+            <a class="Telefono"  target="_blank"><img class="icono" src="./img/telefono.png" alt="telefono"> Tel:3987-0609</a>
+            <a class="WhatsApp" href="https://wa.me/5491123915114?text=Hola soy Bomba Erick y quiero aprobar"><img class="icono" src="./img/whatsapp.png" alt="Whatsapp"> WhatsApp</a>
 
         </div>
-        <a href="#inicio">Volver al Inicio</a>
+   
         
 
     </footer>
-    
+    <a id="volver" href="#inicio">Volver al Inicio</a>
 </body>
 </html>
