ajuste background media

--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
         <h2 id="propuesta">Propuesta educativa</h2>
         <section class="pecard" >
            
-            <article>
+            <article class="propuestas">
                 <img src="./img/propuestauno.jpg" alt="propuestauno">
                 <h4>Propuesta1</h4>
             </article>
 
-            <article>
+            <article class="propuestas">
                 <img src="./img/propuestados.jpg" alt="propuestados">
                 <h4>Propuesta2</h4>
             </article>
 
-            <article>
+            <article class="propuestas">
                 <img src="./img/propuestatres.jpg" alt="propuestatres">
                 <h4>Propuesta3</h4>
             </article>
 
-            <article>
+            <article class="propuestas">
                 <img src="./img/propuestacuatro.jpg" alt="propuestacuatro">
                 <h4>Propuesta4</h4>
 
