--- a/contacto.html
+++ b/contacto.html
@@ -16,11 +16,40 @@
 <!-- <a href="https://www.flaticon.es/iconos-gratis/escuela-secundaria" title="escuela secundaria iconos">Escuela secundaria iconos creados por Aranagraphics - Flaticon</a> -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
         
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylecontacto.css">
     <link rel="shortcut icon" sizes="16x16" href=""> <!-- falta completar icono -->
     <title>UntrefSchool</title>
 </head>
 <body>
+
+    <header id="inicio" class="inicio">
+        <nav>
+<ul> 
+    <li class="menu" id="menu"> <a href="./index.html#inicio">Inicio</a>
+<ul>
+    <li> <a href="./index.html#quienesSomos">Quienes somos</a></li>
+    <li><a href="./index.html#elegirnos">¿Por qué elegirnos?</a></li>
+    <li><a href="./index.html#propuesta">Propuesta educativa</a></li>
+    <li><a href="./index.html#noticias">Últimas noticias</a></li>
+    <li><a href="./contacto.html">Contacto</a></li>
+</ul>
+</li> 
+</ul>  
+        </nav>
+        <h1>PROYECTO INTEGRADOR WEB UNTREFSCHOOL</h1>
+    </header>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     
