--- a/contacto.html
+++ b/contacto.html
@@ -11,7 +11,6 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Belanosima&display=swap" rel="stylesheet">
-<!-- boostrap -->
 <link rel="shortcut icon" sizes="16x16" href="./img/favicon.png"> <!-- falta completar icono -->
 <!-- <a href="https://www.flaticon.es/iconos-gratis/escuela-secundaria" title="escuela secundaria iconos">Escuela secundaria iconos creados por Aranagraphics - Flaticon</a> -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -39,16 +38,57 @@
         <h1>PROYECTO INTEGRADOR WEB UNTREFSCHOOL</h1>
     </header>
 
+    <main>
+<div class="container">
+  <h1>Formulario de contacto</h1>
+  <form target="_blank" action="https://formsubmit.co/erickwalterbomba@gmail.com" method="POST">
+    <div class="form-group">
+      <div class="form-row">
+        <div class="col">
+            <label for="name">Nombre y Apellido:</label>
+          <input type="text" name="name" class="form-control" placeholder="Ingrese su nombre y apellido" required>
+        </div>
+        <div class="col">
+            <label for="email">Email:</label>
+          <input type="email" name="email" class="form-control" placeholder="Ingrese su correo electronico/email" required>
+        </div>
+      </div>
+    </div>
+    <div class="form-group">
+        <label for="textarea">Ingrese su consulta:</label>
+      <textarea placeholder="Complete este campo con su consulta" class="form-control" name="message" rows="10" required></textarea>
+    </div>
+    <button type="submit" class="btn btn-lg btn-dark btn-block">Enviar mensaje</button>
+  </form>
+</div>
+    </main>
 
 
+    <footer>
+        <div class="rs">
+            <h4>Redes Sociales</h4>
+            <a class="facebook" href="https://www.facebook.com/" target="_blank" > <img class="icono" src="./img/facebook.png" alt="Facebook"> Facebook</a>
+            <a class="instagram" href="https://www.instagram.com/" target="_blank"><img class="icono" src="./img/instagram.png" alt="Instagram"> Instagram</a>
+            <a class="twitter" href="https://twitter.com/?lang=es" target="_blank"><img class="icono" src="./img/twitter.png" alt="Twiter"> Twiter</a>
+        </div>
+        <div class="inst">
+            <h4>Instituto</h4>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d210454.53302054704!2d-58.69747170068025!3d-34.49395742302816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb825bfe94b41%3A0x9605c0d752a00a83!2sUNTREF%20Virtual!5e0!3m2!1ses-419!2sar!4v1690681127795!5m2!1ses-419!2sar" width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
+            
+        </div>
+        <div class="contacto">
+            <h4>Contacto</h4>
+            <a  href="./contacto.html" ><img class="icono" src="./img/formulario.png" alt="Contacto"> Contacto </a>
+            <a class="Telefono"  target="_blank"><img class="icono" src="./img/telefono.png" alt="telefono"> Tel:3987-0609</a>
+            <a class="WhatsApp" href="https://wa.me/5491123915114?text=Hola soy Bomba Erick y quiero aprobar"><img class="icono" src="./img/whatsapp.png" alt="Whatsapp"> WhatsApp</a>
 
+        </div>
+   
+        
 
-
-
-
-
-
+    </footer>
+    <a id="volver" href="./index.html#inicio">Volver al Inicio</a>
 
 
 
