completar campos p acorde a cada sector

--- a/index.html
+++ b/index.html
@@ -42,15 +42,23 @@
         <h2 id="quienesSomos">Quienes somos</h2>
         <section class="quienesSomos">
             <img class="qsimg" src="./img/quienessomos.jpg" alt="quienes somos">
-            <p class="qsp">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero quibusdam excepturi
-                molestias soluta temporibus consectetur eius ratione sed? Nostrum quae esse nulla ipsum at consequatur
-                ipsa laboriosam temporibus molestiae sint!</p>
+            <p class="qsp"> UntrefSchool es un colegio primario comprometido con la educación de calidad y los valores
+                fundamentales. Su equipo de docentes altamente calificados emplea métodos pedagógicos innovadores para
+                estimular el crecimiento académico, emocional y social de sus estudiantes. Fomenta el trabajo en equipo,
+                la tolerancia y el respeto mutuo, y ofrece un currículo diversificado que incluye asignaturas esenciales
+                y actividades artísticas y deportivas. Su misión es formar ciudadanos responsables, creativos y
+                comprometidos con la sociedad, preparándolos para enfrentar los desafíos del mundo actual y futuro,
+                mientras inculca la conciencia ambiental y el amor por el aprendizaje.
+            </p>
+
         </section>
         <h2 id="elegirnos">¿Por qué elegirnos?</h2>
         <section>
-            <p class="lp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea natus, eveniet necessitatibus
-                magnam, itaque incidunt tempore provident, officia quae neque cum fugit possimus voluptates! Voluptas
-                voluptate perferendis officiis vel. Atque.</p>
+            <p class="lp">Elegir UntrefSchool es una decisión que marcará la diferencia en la vida educativa de tu hijo o hija. Aquí te presentamos algunas razones clave para considerarnos:
+                1.	Educación de calidad: Nuestro equipo de docentes altamente capacitados utiliza metodologías pedagógicas innovadoras y adaptadas a las necesidades individuales de cada estudiante.
+                2.	Desarrollo integral: Buscamos fomentar el crecimiento emocional y social de nuestros alumnos, promoviendo valores como la tolerancia, el respeto, la responsabilidad y el trabajo en equipo. 
+                3.	complementamos el aprendizaje en el aula con una amplia gama de actividades artísticas, culturales y deportivas. Estas experiencias enriquecedoras permiten que los estudiantes descubran y desarrollen sus talentos, intereses y pasiones.
+                </p>
             <img class="limg" src="./img/porqueelegirnos.jpg" alt="">
 
         </section>
@@ -59,22 +67,22 @@
 
             <article class="propuestas">
                 <img src="./img/propuestauno.jpg" alt="propuestauno">
-                <h4>Propuesta1</h4>
+                <h4> Actividades deportivas</h4>
             </article>
 
             <article class="propuestas">
                 <img src="./img/propuestados.jpg" alt="propuestados">
-                <h4>Propuesta2</h4>
+                <h4>Matemáticas</h4>
             </article>
 
             <article class="propuestas">
                 <img src="./img/propuestatres.jpg" alt="propuestatres">
-                <h4>Propuesta3</h4>
+                <h4>Literatura</h4>
             </article>
 
             <article class="propuestas">
                 <img src="./img/propuestacuatro.jpg" alt="propuestacuatro">
-                <h4>Propuesta4</h4>
+                <h4>Valores</h4>
 
             </article>
         </section>
@@ -83,16 +91,16 @@
 
             <article class="ununo">
                 <h3>Nuevos maestros</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam fugiat vel, quae similique
-                    necessitatibus esse officia obcaecati. Tenetur, beatae dolorum sequi aliquid repellendus nisi ea
-                    vitae error voluptates accusantium tempora?</p>
+                <p>1.	Victor Asion – Actividades deportivas: Estamos emocionados de dar la bienvenida a Victor Asion a nuestro equipo. Su compromiso con la excelencia académica y su pasión por inspirar el amor por el deporte son evidentes en su trayectoria educativa.               
+                </p>
+                <p>2.	Yamila Camp - Valores: Nos complace presentar a Yamila Camp, quien se incorpora a nuestro equipo como maestra de Valores. Ella trae consigo una energía contagiosa y una creatividad excepcional para involucrar a los estudiantes en el proceso de aprendizaje.
+                </p>
             </article>
 
             <article class="undos">
                 <h3>Inicio de vacaciones</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis ducimus quaerat voluptas nisi soluta
-                    porro consequuntur hic omnis possimus, quidem ipsam laboriosam animi qui quas totam voluptates unde
-                    natus reiciendis.</p>
+                <p>Fecha de inicio de las vacaciones de verano: 15 de diciembre de 2023
+                    Fecha de finalización de las vacaciones de verano: 28 de febrero de 2024</p>
             </article>
 
 
