formatos de doc

--- a/index.html
+++ b/index.html
@@ -54,11 +54,16 @@
         </section>
         <h2 id="elegirnos">¿Por qué elegirnos?</h2>
         <section>
-            <p class="lp">Elegir UntrefSchool es una decisión que marcará la diferencia en la vida educativa de tu hijo o hija. Aquí te presentamos algunas razones clave para considerarnos:
-                1.	Educación de calidad: Nuestro equipo de docentes altamente capacitados utiliza metodologías pedagógicas innovadoras y adaptadas a las necesidades individuales de cada estudiante.
-                2.	Desarrollo integral: Buscamos fomentar el crecimiento emocional y social de nuestros alumnos, promoviendo valores como la tolerancia, el respeto, la responsabilidad y el trabajo en equipo. 
-                3.	complementamos el aprendizaje en el aula con una amplia gama de actividades artísticas, culturales y deportivas. Estas experiencias enriquecedoras permiten que los estudiantes descubran y desarrollen sus talentos, intereses y pasiones.
-                </p>
+            <p class="lp">Elegir UntrefSchool es una decisión que marcará la diferencia en la vida educativa de tu hijo
+                o hija. Aquí te presentamos algunas razones clave para considerarnos:
+                1. Educación de calidad: Nuestro equipo de docentes altamente capacitados utiliza metodologías
+                pedagógicas innovadoras y adaptadas a las necesidades individuales de cada estudiante.
+                2. Desarrollo integral: Buscamos fomentar el crecimiento emocional y social de nuestros alumnos,
+                promoviendo valores como la tolerancia, el respeto, la responsabilidad y el trabajo en equipo.
+                3. complementamos el aprendizaje en el aula con una amplia gama de actividades artísticas, culturales y
+                deportivas. Estas experiencias enriquecedoras permiten que los estudiantes descubran y desarrollen sus
+                talentos, intereses y pasiones.
+            </p>
             <img class="limg" src="./img/porqueelegirnos.jpg" alt="">
 
         </section>
@@ -91,9 +96,13 @@
 
             <article class="ununo">
                 <h3>Nuevos maestros</h3>
-                <p>1.	Victor Asion – Actividades deportivas: Estamos emocionados de dar la bienvenida a Victor Asion a nuestro equipo. Su compromiso con la excelencia académica y su pasión por inspirar el amor por el deporte son evidentes en su trayectoria educativa.               
+                <p>1. Victor Asion – Actividades deportivas: Estamos emocionados de dar la bienvenida a Victor Asion a
+                    nuestro equipo. Su compromiso con la excelencia académica y su pasión por inspirar el amor por el
+                    deporte son evidentes en su trayectoria educativa.
                 </p>
-                <p>2.	Yamila Camp - Valores: Nos complace presentar a Yamila Camp, quien se incorpora a nuestro equipo como maestra de Valores. Ella trae consigo una energía contagiosa y una creatividad excepcional para involucrar a los estudiantes en el proceso de aprendizaje.
+                <p>2. Yamila Camp - Valores: Nos complace presentar a Yamila Camp, quien se incorpora a nuestro equipo
+                    como maestra de Valores. Ella trae consigo una energía contagiosa y una creatividad excepcional para
+                    involucrar a los estudiantes en el proceso de aprendizaje.
                 </p>
             </article>
 
@@ -130,11 +139,11 @@
             <h4>Contacto</h4>
             <a href="./contacto.html" target="_blank"><img class="icono" src="./img/formulario.png" alt="Contacto">
                 Contacto </a>
-        
+
             <a class="WhatsApp" href="https://wa.me/5491123915114?text=Hola soy Bomba Erick y quiero aprobar"><img
                     class="icono" src="./img/whatsapp.png" alt="Whatsapp"> WhatsApp</a>
-                    <a class="Telefono" target="_blank"><img class="icono" src="./img/telefono.png" alt="telefono">
-                        Tel:3987-0609</a>
+            <a class="Telefono" target="_blank"><img class="icono" src="./img/telefono.png" alt="telefono">
+                Tel:3987-0609</a>
         </div>
 
 
