ajuste de form y btn

--- a/contacto.html
+++ b/contacto.html
@@ -65,7 +65,7 @@
           <textarea placeholder="Complete este campo con su consulta" class="form-control" name="message" rows="10"
             required></textarea>
         </div>
-        <button type="submit" class="btn btn-lg btn-dark btn-block">Enviar mensaje</button>
+        <button type="submit" class="btn">Enviar mensaje</button>
       </form>
     </div>
   </main>
